--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <!--Web apps/ Hybrids app: Ionic/Cordova-->
+    <!--<meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+
+    <!--RWD-->
+    <meta name="viewport" content="width=device-width">ç
+
+    <style>
+
+        body{
+            background: lightblue;
+        }
+
+        @media screen and (min-width: 480px){
+            body{
+                background: lightgreen;
+            }
+        }
+
+    </style>
+
     <title>Document</title>
 </head>
 <body>
