Example Responsive Web Design 3 Mostly fluid - index3.html

--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,113 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <!--Web apps/ Hybrids app: Ionic/Cordova-->
+    <!--<meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">-->
+
+    <!--RWD-->
+    <meta name="viewport" content="width=device-width">
+
+
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" media="screen" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <!-- Google font -->
+    <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+
+    <style>
+
+        .text{
+            padding: 10px;
+            width: 100%;
+            font-family: 'Oswald', sans-serif;
+        }
+
+        @media (min-width: 600px) {
+            .text {
+                font-size: 1.5em;
+                padding: 20px;
+                font-family: 'Oswald', sans-serif;
+            }
+
+        }
+        @media (min-width: 800px) {
+            .text {
+                font-size: 2em;
+                padding: 30px;
+                font-family: 'Oswald', sans-serif;
+            }
+
+        }
+
+    </style>
+
+    <title>Document</title>
 </head>
 <body>
 
+<div class="container">
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Hello, world!</h1>
+            <p>Contents...</p>
+            <p>
+                <a class="btn btn-primary btn-lg">Learn more</a>
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut beatae consectetur, cumque dolor doloremque ea eum fugiat incidunt itaque labore maxime natus odit porro sed ullam, ut voluptates voluptatibus. Et!</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste officia quas voluptatum. Doloremque dolores eaque esse eveniet hic minima minus qui quos rem reprehenderit, temporibus ullam velit voluptate voluptatem, voluptatum!</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, aperiam cum deserunt doloremque error esse
+                facilis itaque laboriosam minima molestias placeat possimus, quaerat quam, quas quod sequi sunt ut
+                vel?</p>
+
+            <p>Debitis deleniti ea eos expedita explicabo fugiat harum inventore iure magni natus non possimus,
+                reiciendis sint. Ab, dicta ea, et natus non repellat sapiente sit vel vero voluptate voluptatibus
+                voluptatum.</p>
+
+            <p>Animi architecto ea nesciunt quod repudiandae? A cum deleniti est fugiat modi totam unde? A architecto
+                corporis, eius enim eveniet excepturi ipsa itaque libero mollitia quia quis quod reprehenderit sint?</p>
+
+            <p>Consectetur dicta dolor dolore fuga fugit ipsam labore maiores nemo nobis omnis quae, quaerat quas quidem
+                quisquam quo ratione sunt! Aperiam consectetur distinctio enim magni nulla provident quae quo
+                voluptate!</p>
+
+            <p>Aliquid animi cumque cupiditate, ea eaque est expedita harum ipsam iusto laudantium non obcaecati
+                perferendis provident, quia quod reiciendis tempora voluptas voluptatem voluptates voluptatum. Amet
+                dignissimos molestiae quidem quod voluptates.</p>
+
+            <p>Cupiditate expedita mollitia porro quis rem, sed tempora? A beatae dolores illo iure modi reiciendis
+                repudiandae voluptatibus. Accusamus amet atque dolores excepturi molestiae quod, similique. Dicta
+                dignissimos et tempora vel.</p>
+
+            <p>Cumque cupiditate deserunt dignissimos eius iusto nesciunt officiis quas quisquam quo voluptatem.
+                Dignissimos velit, voluptatum. Alias consequatur ipsam itaque pariatur sapiente sint velit, voluptates!
+                Delectus explicabo molestias officia sint voluptatibus.</p>
+
+            <p>Ad alias asperiores, beatae est expedita explicabo nulla odit omnis quas sapiente. Alias aliquam
+                architecto culpa cum dignissimos eum, hic, itaque iusto necessitatibus nesciunt, odit praesentium quasi
+                quidem! Consequatur, ducimus!</p>
+
+            <p>Amet culpa dolor eveniet modi nisi optio quasi quibusdam suscipit unde ut! Accusantium aliquam,
+                exercitationem odio pariatur reiciendis voluptate voluptates? Ab aliquid dolorum eius esse est eveniet
+                laborum magni tenetur!</p>
+
+            <p>Aliquid blanditiis deleniti exercitationem fugit, magnam placeat quisquam tempore. Animi commodi delectus
+                dolore eveniet excepturi fugit nostrum numquam, pariatur quam quas qui quod, rem similique sint totam ut
+                velit veniam.</p>
+        </div>
+    </div>
+</div>
+
+<!-- JS Bootstrap -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<!-- jQuery -->
+<scrypt src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></scrypt>
 </body>
 </html>
