--- a/index4.html
+++ b/index4.html
@@ -41,23 +41,27 @@
         }
 
         @media (min-width: 600px) {
-            .columna2,.columna3,.columna4,.columna5{
-                width: 50%;
+            .columna1 {
+                width: 60%;
+                order: 2;
+            }
+
+            .columna2 {
+                width: 40%;
+                order: 1;
+            }
+            .columna3
+            .columna4
+            .columna5 {
+                order: 3;
             }
         }
 
         @media (min-width: 800px) {
-            .columna1 {
-
-                width: 60%;
-            }
-            .columna2 {
-
-                width: 40%;
-            }
-            .columna3,.columna4,.columna5{
-
-                width: 50%;
+            .columna3
+            .columna4
+            .columna5 {
+                width: 33%;
             }
         }
         .container{
